--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.540.0",
     "next": "15.4.6",
+    "next-video": "^2.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swiper": "^11.2.10"
